--- a/src/pages/searchResults/searchResults.html
+++ b/src/pages/searchResults/searchResults.html
@@ -16,7 +16,7 @@
             <ion-row>
               <ion-col col-4>
                 <div class="text-center">
-                    <img class="vehicle-image img-thumbnail" src="http://ef24.ch/carlisting/img/vehicle/orignal/{{vehicle.VehicleImage.file_name}}" />            
+                    <img class="vehicle-image img-thumbnail" src="{{baseUrl}}/img/vehicle/orignal/{{vehicle.VehicleImage.file_name}}" />
                 </div>
               </ion-col>
               <ion-col col-8>
@@ -43,7 +43,7 @@
             <ion-row>
               <ion-col col-4>
                 <div class="text-center">
-                    <img class="vehicle-image img-thumbnail" src="http://ef24.ch/carlisting/img/vehicle/orignal/{{vehicle.VehicleImage.file_name}}" />            
+                    <img class="vehicle-image img-thumbnail" src="{{baseUrl}}img/vehicle/orignal/{{vehicle.VehicleImage.file_name}}" />            
                 </div>
               </ion-col>
               <ion-col col-8>
@@ -68,7 +68,7 @@
             <ion-row>
               <ion-col col-4>
                 <div class="text-center">
-                    <img class="vehicle-image img-thumbnail" src="http://ef24.ch/carlisting/img/vehicle/orignal/{{vehicle.VehicleImage.file_name}}" />            
+                    <img class="vehicle-image img-thumbnail" src="{{baseUrl}}img/vehicle/orignal/{{vehicle.VehicleImage.file_name}}" />            
                 </div>
               </ion-col>
               <ion-col col-8>
