--- a/src/pages/step-one/step-one.html
+++ b/src/pages/step-one/step-one.html
@@ -21,17 +21,17 @@
 
     <ion-item>
       <ion-label stacked>Make</ion-label>
-      <ion-input type="text"   [ngModel]="vehicle.brand"></ion-input>
+      <ion-input type="text"   [(ngModel)]="vehicle.brand"></ion-input>
     </ion-item>
 
     <ion-item>
         <ion-label stacked>Model</ion-label>
-      <ion-input type="text"  [ngModel]="vehicle.model"></ion-input>
+      <ion-input type="text"  [(ngModel)]="vehicle.model"></ion-input>
     </ion-item>
 
     <ion-item>
       <ion-label stacked>Type</ion-label>
-      <ion-input type="text"  [ngModel]="vehicle.type"></ion-input>
+      <ion-input type="text"  [(ngModel)]="vehicle.type"></ion-input>
     </ion-item>
 
     <ion-item>
