--- a/src/pages/vehicleDetails/vehicleDetails.html
+++ b/src/pages/vehicleDetails/vehicleDetails.html
@@ -10,8 +10,8 @@
 <ion-content>
 
   <ion-slides>
-    <ion-slide>
-      <img style="width:100%;" src="http://ef24.ch/carlisting/img/vehicle/orignal/{{vehicle.VehicleImage.file_name}}" />
+    <ion-slide *ngFor="let image of vehicle.VehicleDoc;"  >
+      <img style="width:100%;" src="{{baseUrl}}}img/vehicle/orignal/{{image.file_name}}" />
     </ion-slide>
   </ion-slides>
 
@@ -34,7 +34,7 @@
 
     <ion-row>
       <ion-col col-6>
-        <button ion-button full color="danger">Bid now</button>
+        <button ion-button full color="danger" (click)="openBidModal();">Bid now</button>
       </ion-col>
       <ion-col col-6>
           <strong><button ion-button full color="dark" (click)="buyNowVehicle();">Buy now</button></strong>
